--- a/dashboard_module/Interface-web/app/templates/base.html
+++ b/dashboard_module/Interface-web/app/templates/base.html
@@ -36,17 +36,19 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link px-2 text-secondary" href="{{url_for('profil')}}">My profil</a>
-          </li>
-
-          <li class="nav-item">
             <a class="nav-link px-2 text-secondary" href="{{url_for('simulation')}}">Simulation</a>
           </li>
+
+          {% if session['user_role'] == 'admin': %}
+          <li class="nav-item">
+            <a class="nav-link px-2 text-secondary" href="{{url_for('administrator')}}">Admin</a>
+          </li>
+          {% endif %}
           {% endif %}
         </ul>
 
         <div class="text-end">
-          {% if  'user_id' in session %}
+          {% if 'user_id' in session %}
           <a href="{{url_for('logout')}}" class="btn btn-outline-light me-2">Log out</a>
 
           {% else %}
